added some png files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
+    <div class="top-container">
+        <img src="./assets/images/cloud.png" alt="cloud-image">
+        <h1>I'm Samuel.</h1>
+        <p>A programmer.</p>
+        <img src="./assets/images/cloud.png" alt="cloud-image">
+        <img src="./assets/images/mountain.png" alt="mountain-image">
+
+    </div>
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
     
 </body>
 </html>
