--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Cordova</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
     <div class="top-container">
-        <img src="./assets/images/cloud.png" alt="cloud-image">
+        <img class="top-cloud"src="./assets/images/cloud.png" alt="cloud-image">
         <h1>I'm Samuel.</h1>
-        <p>A programmer.</p>
-        <img src="./assets/images/cloud.png" alt="cloud-image">
+        <p>A <span class="pro">pro</span>grammer.</p>
+        <img class="bottom-cloud"src="./assets/images/cloud.png" alt="cloud-image">
         <img src="./assets/images/mountain.png" alt="mountain-image">
 
     </div>
