changing px to em

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>I enjoy programming many things, from full stack web apps, mobile apps, games, landing pages etc.</p>
             </div>
             <div class="skill-row">
-                <img class="" src="./assets/images/chillies.png" alt="">
+                <img class="" src="./assets/images/mic2.png" alt="">
                 <h3>Singing</h3>
                 <p>I've been known to do a karaoke or two</p>
             </div>
