messing with styles and sizing

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="profile">
             <img src="./assets/images/Profile-picture.png" alt="">
             <h2>Hello.</h2>
-            <p>I <strong>AM FUELED BY AND ❤️ COFFEE</strong> and  love to code!
-            </p>
+            <h2 class="caption">I <strong>AM FUELED BY AND ❤️ COFFEE</strong> and  love to code!
+            </h2>
         </div>
         <br>
         <hr>
