--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="top-container">
         <img class="top-cloud" src="./assets/images/cloud.png" alt="cloud-image">
         <h1>I'm Samuel Cordova</h1>
-        <p>A Web Wizard and Game Dev Initiate.</p>
+        <h2>A Web Wizard and Game Dev Initiate.</h2>
         <img class="bottom-cloud" src="./assets/images/cloud.png" alt="cloud-image">
         <img src="./assets/images/mountain.png" alt="mountain-image">
 
@@ -28,8 +28,8 @@
         <div class="profile">
             <img src="./assets/images/Profile-picture.png" alt="">
             <h2>Hello.</h2>
-            <h2 class="caption">I <strong>AM FUELED BY AND ❤️ COFFEE</strong> and  love to code!
-            </h2>
+            <p class="caption">I <strong>AM FUELED BY AND ❤️ COFFEE</strong> and  love to code!
+            </p>
         </div>
         <br>
         <hr>
@@ -48,8 +48,8 @@
         </div>
         <hr>
         <div class="contact-me">
-            <h2>Get In Touch</h2>
-            <h3>If you are interested in getting a website or app created, or collaboration</h3>
+            <!-- <h2>Get In Touch</h2> -->
+            <h3>App and Website Creation</h3>
             <p>Feel free to get in touch with me, if you're in the San Antonio Area we can grab a bite and talk code!</p>
             <a class="btn" href="mailto:cordovas1337@gmail.com">CONTACT ME</a>
         </div>
