--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- need to update color scheme and background* -->
 
     <div class="top-container">
         <img class="top-cloud" src="./assets/images/cloud.png" alt="cloud-image">
