working on styles

--- a/index.html
+++ b/index.html
@@ -35,27 +35,33 @@
         <br>
         <hr>
         <div class="skills">
+
             <h2>My Skills.</h2>
             <div class="skill-row">
                 <img class="computer" src="./assets/images/computer.png" alt="">
-                <h3>All things programming</h3>
-                <p>I enjoy programming many things, from full stack web apps, mobile apps, games, landing pages etc.</p>
+                <div class="text-container">
+                    <h3>All things programming</h3>
+                    <p>I enjoy programming many things, from full stack web apps, mobile apps, games, landing pages etc.</p>
+                </div>
             </div>
+
             <div class="skill-row">
-                <img class="" src="./assets/images/mic2.png" alt="">
+                <img class="mic-img" src="./assets/images/mic2.png" alt="">
                 <h3>Singing</h3>
                 <p>I've been known to do a karaoke or two</p>
             </div>
+
         </div>
         <hr>
+
         <div class="contact-me">
             <!-- <h2>Get In Touch</h2> -->
             <h3>App and Website Creation</h3>
             <p>Feel free to get in touch with me, if you're in the San Antonio Area we can grab a bite and talk code!</p>
             <a class="btn" href="mailto:cordovas1337@gmail.com">CONTACT ME</a>
         </div>
-    </div>
 
+    </div>
 
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
